# ChangeLog for dev-embedded/phidget
# Copyright 1999-2008 Nathan Brink; Distributed under the GPL v2
# $Header: $

  06 Jan 2009; Nathan Phillip Brink <ohnobinki@ohnopublishing.net> +phidget-2.1.5.20090105.ebuild, +files/phidget21-2.1.5.20090105-crosscompile.patch, phidget-2.1.4.20080924.ebuild, phidget-2.1.5.20081023.ebuild
	Bumped to new version - needed to create a new files/phidget-crosscompile.patch for this version because the Makefile changed. 
	Updated logic in the all of the ebuilds - they are all identical except for which patches are referenced. Fixed references to things like make=>emake and calling java stuff when the java use-flag was disabled
	
  01 Dec 2008; Cron Daemon for Nathan Phillip Brink
  <ohnobinki@ohnopublishing.net> ChangeLog:
  Automatically bumped to phidget-2.1.5.20081023.ebuild from
  phidget-2.1.4.20080924.ebuild

*phidget-2.1.4.20080924 (17 November 2008)

  17 Nov 2008; Nathan Phillip Brink <ohnobinki@ohnopublishing.net> +phidget-2.1.4.20080924.ebuild, +Manifest, +files/phidget21-crosscompile.patch, +file/phidget21-java.patch, +file/phidget21-libdir.patch :
  Initial import.  Ebuild submitted by Nathan Phillip Brink <ohnobinki@ohnopublishing.net> (me?).