@@ -5,7 +5,10 @@ AUX phidget21-libdir.patch 562 RMD160 b4d98da1326708f13ec19a938c64e829431b975a S
 DIST Phidgetlinux_2.1.4.20080924.tar.gz 292176 RMD160 2360bc2ccc14d2afd30de11386eac3f4e3399cf0 SHA1 a296abee3f48d8126b521b10e487cd77fe07051d SHA256 7f60fc29147b45bbe0fa6cca769bf8a940839b13b8786bdfbca18bb54822cb25
 DIST Phidgetlinux_2.1.5.20081023.tar.gz 304986 RMD160 08819880bbf364cbf388c826f2dd8b4c3dba5933 SHA1 3f1e0ad9b610968ee0539093be76ff539cc66210 SHA256 a03c0c46fa2901cc536492933da30711f522cb9776fd15b3e556f3cba2cdd709
 DIST Phidgetlinux_2.1.5.20090105.tar.gz 316490 RMD160 0c0088eee842b7b4b723867c08964557c665b9aa SHA1 484fa7c170e412e9513d5f08e883a5efd9a7c366 SHA256 bfaaaf2aa21c854b2f0305ed6b55605d336b6b890eedf40ead0e17b419b7ac33
-EBUILD phidget-2.1.4.20080924.ebuild 1493 RMD160 17f0115cc87bea75d6a9315e5295d0bafa6704d0 SHA1 7fd6b20909c32e0b2856c738412889b0fafff13e SHA256 1b86666fbb4c61671f69b987f693fccaa6b5b23b08d280e0c5ed85a1ac9e6366
-EBUILD phidget-2.1.5.20081023.ebuild 1493 RMD160 17f0115cc87bea75d6a9315e5295d0bafa6704d0 SHA1 7fd6b20909c32e0b2856c738412889b0fafff13e SHA256 1b86666fbb4c61671f69b987f693fccaa6b5b23b08d280e0c5ed85a1ac9e6366
-EBUILD phidget-2.1.5.20090105.ebuild 1558 RMD160 75ee82c1d88190e9a94aef349cf69668320408c5 SHA1 0e05ecb5801d392cc9deb95f150681d069573510 SHA256 429b659b39d593e0db88910db799560761d305708935e844449c0886f335108a
-MISC ChangeLog 1207 RMD160 bd42df7744f01c013804da153c2ddfc10e9afb08 SHA1 3c92e7166b1ec1e6394e2be53fa56687f121e68e SHA256 82893b9acdcdc20261bbad4c465b320773cd15e7d83a866a9fdf836a91f84e58
+DIST Phidgetlinux_2.1.6.20090430.tar.gz 342985 RMD160 a45e335c4672e918152537cd771bcd4b21a85ddf SHA1 60fadd7ba15342b2ad6c58b19d659532fe963513 SHA256 b1cf06ecae292c2b201c30878fa2e89c2251d8a0b994a9227870a7ce52dc2605
+EBUILD phidget-2.1.4.20080924.ebuild 1510 RMD160 a19a62cf9f03c416e6787270fc4c25bc44a9a7ec SHA1 8223b73f26000e64f4e0b28f9f8189ff97feceaa SHA256 f647046a41f92842379e71c8a143cd4edf534f46497d9273a3e89af85ea01d91
+EBUILD phidget-2.1.5.20081023.ebuild 1510 RMD160 a19a62cf9f03c416e6787270fc4c25bc44a9a7ec SHA1 8223b73f26000e64f4e0b28f9f8189ff97feceaa SHA256 f647046a41f92842379e71c8a143cd4edf534f46497d9273a3e89af85ea01d91
+EBUILD phidget-2.1.5.20090105.ebuild 1575 RMD160 cad1cb9fc310230e9c5edc3cc213e1ae18d2fca3 SHA1 0441ce28ede42e144d08db391c7549bc0ea380dd SHA256 39b63bc6d6cdba4a2385b9c6f720b872da31ab48caaac4652ce8eb7d518cee70
+EBUILD phidget-2.1.6.20090430.ebuild 1575 RMD160 289969ba6d709236b795ac6f82580a24a5df8bfa SHA1 a74a256a4ee037d7e8521d5cc259146582f9a6ca SHA256 13a0eff5276cd0ebf02a104fd87115be9649303624e0e55a98994235c2938577
+MISC ChangeLog 1567 RMD160 2c861aca09692ed41d2cf0773d046c5601bed2ad SHA1 c34160374bcfec7f9c4f91f593df59eef5d978b0 SHA256 967e1f46198c208644ce618c7b1c968b44511351a706137a14f2fa81f1cc1fb3
+MISC metadata.xml 159 RMD160 f10ed331bd974e86e8c4596a8a52e300f40aec97 SHA1 84133adb2dda5a115dd082b76b119516e3154cef SHA256 8d195cad36f7f93232fa3b2523bd2f55d5ff84e843087433aa12cbb9af40e3ce
